[package]
name = "mysql-replication-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1" }
chrono = { version = "0.4" }
chrono-tz = { version = "0.8.3" }
hex = { version = "0.4" }
uuid = { version = "1.4.1", features = ["v1", "fast-rng", "macro-diagnostics"] }
log = { version = "0.4.17" }
log4rs = { version = "1.2.0" }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.140", features=["derive"] }
serde_json = {version = "1.0.82"}
rt-format = { version="0.3.1" }
scan_fmt = { version="0.2.6" }
backtrace = { version="0.3" }
ring = { version="0.16.20" }
rsa = { version = "0.9.2" }
sha1 = "0.10.5"
rand = "0.8.5"
flate2 = "1.0"
semver = "1.0.18"
bigdecimal = "0.4"
zstd = "0.12"
crc32fast = "1.3.2"
tokio = { version = "1", features = ["full"] }
tokio-context = "0.1.3"
async-channel = "1.9.0"
